--- a/client/angular.json
+++ b/client/angular.json
@@ -60,11 +60,14 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
-          "configurations": {
-            "production": {
+          "options": {
               "sslCert": "./ssl/server.crt",
               "sslKey": "./ssl/server.key",
               "ssl": true,
+              "browserTarget": "test:build"
+          },
+          "configurations": {
+            "production": {
               "browserTarget": "client:build:production"
             },
             "development": {
